--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -1,5 +1,5 @@
 <template name='home'>
-	<h2>Image Rater</h2>
+	<h1 class='title'>Image Rater</h1>
 
 	<form id='startTaskForm'>
 		<label for='username'>Username: </label>
