--- a/client/templates/admin/admin.html
+++ b/client/templates/admin/admin.html
@@ -4,6 +4,7 @@
 			<div>
 				Welcome {{> loginButtons}}.
 			</div>
+			<br>
 			{{> dataTable}}
 		{{else}}
 			<div>
@@ -15,6 +16,9 @@
 
 
 <template name='dataTable'>
+	{{#if results}}
+		<button id='buttonDownloadAll'>Download All CSV</button>
+	{{/if}}
 	<table class='table table-striped'>
         <thead>
             <tr>
@@ -31,10 +35,9 @@
                     <td>
                         {{username}}
                     </td>
-                    
-	                    <td><button id='buttonDownload'>Download CSV</button></td>
-			
-                   
+	                <td>
+	                	<button id='buttonDownload'>Download CSV</button>
+	                </td>
                 </tr>
             {{/each}}
         </tbody>
