--- a/client/templates/exit/exit.html
+++ b/client/templates/exit/exit.html
@@ -1,8 +1,7 @@
 <template name='exit'>
 	<div class='rating'>
-		Thank you!
-		<form name='mturk_form' method='post' id='mturk_form' action='https://workersandbox.mturk.com/mturk/externalSubmit'>
-			<!-- <input type='hidden' value='{{userId}}' name='assignmentId' id='assignmentId'> -->
+		Thank youz!
+		<form name='mturkForm' method='post' id='mturkForm' action='https://workersandbox.mturk.com/mturk/externalSubmit'>
 			<input type='text' name='assignmentId' id='assignmentId'>
 			<input type='submit' id='submitButton' value='Submit'>
 		</form>
