--- a/client/templates/exit/exit.html
+++ b/client/templates/exit/exit.html
@@ -1,9 +1,9 @@
 <template name='exit'>
 	<div class='rating'>
 		Thank youz!
-		<form name='mturkForm' method='post' id='mturkForm' action='https://workersandbox.mturk.com/mturk/externalSubmit'>
+		<!-- <form name='mturkForm' method='post' id='mturkForm' action='https://workersandbox.mturk.com/mturk/externalSubmit'>
 			<input type='text' name='assignmentId' id='assignmentId'>
 			<input type='submit' id='submitButton' value='Submit'>
-		</form>
+		</form> -->
 	</div>
 </template>
