--- a/client/style/main.css
+++ b/client/style/main.css
@@ -23,6 +23,13 @@ body {
 	font-size: 22px;
 }
 
+.survey {
+	font-weight: bold;
+	font-family: Arial;
+	font-size: 20px;
+	line-height: 50px;
+}
+
 .title {
 	font-weight: bold;
 	font-family: Arial;
