troubleshooting submit to amazon

--- a/client/templates/exit/exit.html
+++ b/client/templates/exit/exit.html
@@ -1,7 +1,7 @@
 <template name='exit'>
 	<div class='rating'>
 		Thank youz!
-		<form name='mturkForm' method='post' id='mturkForm' action='https://workersandbox.mturk.com/mturk/externalSubmit'>
+		<form name='mturkForm'  id='mturkForm'>
 			<input type='text' name='assignmentId' id='assignmentId'>
 			<input type='submit' id='submitButton' value='Submit'>
 		</form>
