--- a/client/templates/exit/exit.html
+++ b/client/templates/exit/exit.html
@@ -1,9 +1,10 @@
 <template name='exit'>
 	<div class='rating'>
-		Thank youz!
-		<form name='mturkForm'  id='mturkForm'>
-			<input type='text' name='assignmentId' id='assignmentId'>
-			<input type='submit' id='submitButton' value='Submit'>
+		Thank you!
+		<form name="hitForm" id="hitForm" action="https://workersandbox.mturk.com/mturk/externalSubmit" method="POST">
+			<input type="hidden" name="assignmentId" value='{{assignmentId}}'>
+			<input type="hidden" name="foo" value="bar" >
+			<input type="submit" class="btn btn-primary btn-lg active" role="button">
 		</form>
 	</div>
 </template>
