--- a/client/templates/exit/exit.html
+++ b/client/templates/exit/exit.html
@@ -1,8 +1,8 @@
 <template name='exit'>
 	<div class='rating'>
-		Thank you!
+		Thank you! {{assignmentId}}
 		<form name="hitForm" id="hitForm" action="https://workersandbox.mturk.com/mturk/externalSubmit" method="POST">
-			<input type="hidden" name="assignmentId" value='{{assignmentId}}'>
+			<input type="hidden" name="assignmentId" value=''>
 			<input type="hidden" name="foo" value="bar" >
 			<input type="submit" class="btn btn-primary btn-lg active" role="button">
 		</form>
