--- a/client/templates/exit/exit.html
+++ b/client/templates/exit/exit.html
@@ -1,6 +1,6 @@
 <template name='exit'>
 	<div class='rating'>
-		Thank you! {{assignmentId}}
+		Thank you!
 		<form name="hitForm" id="hitForm" action="https://workersandbox.mturk.com/mturk/externalSubmit" method="POST">
 			<input type="hidden" name="assignmentId" value=''>
 			<input type="hidden" name="foo" value="bar" >
