reduces number of images presented, adds 100ms delay in image presentation

--- a/client/templates/exit/exit.html
+++ b/client/templates/exit/exit.html
@@ -1,6 +1,8 @@
 <template name='exit'>
 	<div class='rating'>
 		Thank you!
+		<br>
+		Make sure to click this 'Submit' button!
 		<form name="hitForm" id="hitForm" action="https://workersandbox.mturk.com/mturk/externalSubmit" method="POST">
 			<input type="hidden" name="assignmentId" value='{{assignmentId}}'>
 			<input type="hidden" name="foo" value="bar">
