--- a/client/templates/rater/rater.html
+++ b/client/templates/rater/rater.html
@@ -3,7 +3,9 @@
 		<div id='window'>
 			<h1 class='title'>Image Rater</h1>
 		  	<div id='like' class='rating'>Like<br>Press 'A'</div>
-		  	<img src='https://s3.amazonaws.com/imageproj/im{{photoNumber}}.jpg'>
+		  	{{#if loaded}}
+		  		<img src='https://s3.amazonaws.com/imageproj/im{{photoNumber}}.jpg'>
+		  	{{/if}}
 		  	<div id='dislike' class='rating'>Dislike<br>Press 'L'</div>
 	  	</div>
   	</div>
