removes username and adds workerId to schema

--- a/client/templates/admin/admin.html
+++ b/client/templates/admin/admin.html
@@ -23,7 +23,7 @@
         <thead>
             <tr>
                 <th></th>
-                <th>Username</th>
+                <th>Amazon Worker ID</th>
                 <th>Download</th>
             </tr>
         </thead>
@@ -34,7 +34,7 @@
 	                    <td>
 	                    </td>
 	                    <td>
-	                        {{username}}
+	                        {{workerId}}
 	                    </td>
 		                <td>
 		                	<button id='buttonDownload'>Download CSV</button>
