fixes bug of timeout and extraneous button presses, edits to home html

--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -1,8 +1,15 @@
 <template name='home'>
 	<h1 class='title'>Image Rater</h1>
-
+	<div class='rating'>
+		This HIT has 2 parts: a survey &amp; a rating task.
+		<br>
+		You must complete both parts in order to submit the HIT.
+		<br><br>
+		Remember to Accept HIT before starting the HIT!
+	</div>
+	<br>
 	<form id='startTaskForm'>
-		<input type='submit' id='addNewTask' value='Start Task'>
+		<input type='submit' id='addNewTask' value='Start HIT'>
 	</form>
 </template>
 
